--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,21 +2,22 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= javascript_include_tag "https://js.stripe.com/v1/" %>
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <%= render 'layouts/shim' %>
+    <%= render 'layouts/shim' %>    
   </head>
   <body>
+      <body>
     <%= render 'layouts/header' %>
     <div class="container">
-	 <% flash.each do |key, value| %>
-		<div class="alert alert-<%= key %>"><%= value %></div>
-	 <% end %>	
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+
   </body>
 </html>
